# pysparkdt

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  dynamic_workflow.yaml
.github/workflows/: commit-check.yaml  dynamic_workflow.yaml  pr.yaml  release.yaml
dtml/dbx/pysparktesting/: __init__.py  metastore.py  spark_base.py
dtml_dbx_pyspark_testing/: __init__.py
example/myjobpackage/: entrypoint.py  processing.py
example/tests/: test_processing.py
example/tests/data/tables/: expected_output.ndjson
pysparkdt/: metastore.py  spark_base.py
tests/: processing.py  test_deletion_vectors.py  test_dummy.py  test_example.py  test_processing.py
tests/data/tables/: example_input.ndjson
tests/data/tables/schema/: example_input.json  expected_output.json
