[tool.poetry]
name = "dtml-dbx-pyspark-testing"
version = "0" # DO NOT CHANGE - managed by Git tags and CI
description = "Package for simplifying local testing of pyspark DBX pipelines."
authors = ["MLE <mlengineering@datamole.ai>"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "3.10.12"
pyspark = "^3.5.0"
delta-spark = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "~7.4.2"
pytest-mock = "^3.8.2"

[tool.ruff]
line-length = 79
target-version = "py310"
select = [
    "E",
    "F",
    "N",
    "W",
    "I001",
]
src = ["task"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"*/**" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
