[tool.poetry]
name = "pysparkdt"
version = "0" # DO NOT CHANGE - managed by Git tags and CI
license = "MIT"
repository = "https://github.com/datamole-ai/pysparkdt"
description = "An open-source Python library for simplifying local testing of Databricks workflows that use PySpark and Delta tables."
authors = ["Juraj Pall <juraj.pall@datamole.ai>"]
exclude = ["tests"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10, <3.15"
pyspark = { version = ">=3.5.0, <3.5.6 || >=4.0.0, <4.1.0", extras = ["sql"] }  # 3.5.6 - 3.5.8 https://github.com/delta-io/delta/issues/4671 not solved for 3.5.6 - 3.5.8
delta-spark = ">=3.0.0, <4.1.0"
numpy = ">=1.26.0"
pandas = "<3.0.0"  # PySpark 4.0.x not compatible with Pandas 3.0.x (30.1.2026) + Python 3.10 not compatible with Pandas 3
setuptools = { version = "^75.6.0", python = ">=3.12" }  # Necessary for Python 3.12+ as distutils is missing without it

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.ruff]
line-length = 79
target-version = "py310"
lint.select = [
    "E",
    "F",
    "N",
    "W",
    "I001",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"*/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["example"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
